# NATSAT

./: main.py  pyproject.toml
BACKEND/: .env
BACKEND/app/: auth.py  main.py  models.py  schemas.py  services.py
FRONTEND/: analysis.html  frontend.txt  index.html  login.html  main.py  pyproject.toml  register.html  test.py
